--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Catalyst</span></h2>
-                <i><h4 class="animate__animated animate__fadeInUp">connecting ideas to investments</h4></i>
+                <i><h4 class="animate__animated animate__fadeInUp">where ideas meets investments</h4></i>
                 <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get Started</a>
               </div>
             </div>
@@ -132,7 +132,7 @@
         <div class="section-title">
           <!-- <div class="animate__animated animate__fadeInRight"> -->
           <h2 >About Us</h2>
-          <p>Catalyst for Startups is on a mission to support thriving, diverse, and inclusive startup communities around the world. We connect startups with the right people, products, and best practices to help your startup grow.
+          <p>Catalyst for Startups is on a mission to support startup communities around the world. We act as a bridge to connect startups with the right people, products, and best practices to help your startup grow. Our vision is to serve as catalyst to nurture and guide entrepreneurial initiatives with social and/or economic objectives
           </p>
         <!-- </div> -->
         </div>
@@ -197,7 +197,7 @@
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> who got their investors for thier startups. </p>
+              <p><strong>Happy Clients</strong> who got their investors for their startups. </p>
               <a href="#">Find out more &raquo;</a>
             </div>
           </div>
