--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bridge - Sign In</title>
+    <title>Catalyst - Sign In</title>
     <link rel="stylesheet" href="/css/signin.css">
 	<!-- Font Awesome library -->
 	<script src="https://kit.fontawesome.com/fd761fe36d.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	
-    <h2>Welcome to Bridge!</h2>
+    <h2>Welcome to Catalyst!</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="/startup/create-session" method="POST">
