--- a/views/investor_db.ejs
+++ b/views/investor_db.ejs
@@ -44,6 +44,7 @@
         <li><a class="nav-link scrollto" href="/featured">Featured</a></li>
         <li><a class="nav-link scrollto" href="/schools_colleges">Schools/Colleges</a></li>
         <li><a class="nav-link scrollto" href="/learn">Learn</a></li>
+        <li><a class="nav-link scrollto" href="http://localhost:3000">Chat</a></li>
         <% if(locals.user){ %>
           <% if(locals.user.companyName){ %>
             <li><a class="nav-link scrollto" href="/startup/sign-out"><span style="color: #ED8036;"> Sign Out  </span></a></li>
@@ -54,6 +55,7 @@
         <% }else{ %>
               <li><a class="nav-link scrollto" href="/login"><span style="color: #ED8036;">Sign In</span></a></li>
             <% } %>
+            
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
@@ -360,6 +362,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="/featured">Featured</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="/schools_colleges">Schools/Colleges</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="/learn">Learn</a></li>
+          
             </ul>
           </div>
 
