--- a/views/startup_db.ejs
+++ b/views/startup_db.ejs
@@ -43,6 +43,8 @@
         <li><a class="nav-link scrollto" href="/featured">Featured</a></li>
         <li><a class="nav-link scrollto" href="/schools_colleges">Schools/Colleges</a></li>
         <li><a class="nav-link scrollto" href="/learn">Learn</a></li>
+        <li><a class="nav-link scrollto" href="http://localhost:3000">Chat</a></li>
+        
         
             <li><a class="nav-link scrollto" href="/startup/sign-out"><span style="color: #ED8036;"> Sign Out  </span></a></li>
             
@@ -166,7 +168,7 @@
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label class="form-control-label" for="input-email">Email address</label>
-                      <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="riya@cred.com">
+                      <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="harsh@cred.com">
                     </div>
                   </div>
                 </div>
