--- a/views/startup_db.ejs
+++ b/views/startup_db.ejs
@@ -43,7 +43,7 @@
         <li><a class="nav-link scrollto" href="/featured">Featured</a></li>
         <li><a class="nav-link scrollto" href="/schools_colleges">Schools/Colleges</a></li>
         <li><a class="nav-link scrollto" href="/learn">Learn</a></li>
-        <li><a class="nav-link scrollto" href="http://localhost:3000">Chat</a></li>
+        <li><a class="nav-link scrollto" href="https://activelearner7.github.io/chat-implementation/">Chat</a></li>
         
         
             <li><a class="nav-link scrollto" href="/startup/sign-out"><span style="color: #ED8036;"> Sign Out  </span></a></li>
